syntax = "proto3";

package greet;
option go_package = "greet/greetpb";

message Name {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest { Name greeting = 1; }

message GreetResponse { string message = 1; }

message GreetManyTimesRequest { Name greeting = 1; }

message GreetManyTimesResponse { string message = 1; }

message LongGreatRequest { Name greeting = 1; }

message LongGreatResponse { string message = 1; }

message GreetEveryoneRequest { Name greeting = 1; }

message GreetEveryoneResponse { string message = 1; }

message GreetWithDeadlineRequest { Name greeting = 1; }

message GreetWithDeadlineResponse { string message = 1; }

service GreetService {
  // Unary
  rpc Greet(GreetRequest) returns (GreetResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest)
      returns (stream GreetManyTimesResponse) {};

  // Client Streaming
  rpc LongGreat(stream LongGreatRequest) returns (LongGreatResponse) {};

  // Bi Directional Streaming
  rpc GreetEveryone(stream GreetEveryoneRequest)
      returns (stream GreetEveryoneResponse) {};

  // Unary with Deadline
  rpc GreetWithDeadline(GreetWithDeadlineRequest)
      returns (GreetWithDeadlineResponse) {}
}